--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -8,22 +8,11 @@
             "type": "shell",
             "command": "echo Hello"
         },
-        {"label": "OCaml",
+        {"label": "OCaml run",
             "type": "shell",
             "command":
-             "C:\\OCaml64\\usr\\local\\bin\\ocaml-env.exe exec -- C:\\OCaml64\\home\\Jimmy\\.opam\\4.06.1+mingw64c\\bin\\ocaml.exe -init ",
+             "C:\\OCaml64\\usr\\local\\bin\\ocaml-env.exe exec -- C:\\OCaml64\\home\\Jimmy\\.opam\\4.06.1+mingw64c\\bin\\ocaml.exe -init \\\"${file}\\\""
             
-            "args": [
-            
-              {
-            
-                "value": "${file}",
-            
-                "quoting": "escape"
-            
-              }
-            
-            ]
         }
     ]
 }
